implement adding player in tournament